fixed alignment issues with performance-section

--- a/OpenJobs/walterCosmopolis/walter_cosmopolis/sass/components/_footer.scss
+++ b/OpenJobs/walterCosmopolis/walter_cosmopolis/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {  
   text-align: center;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
   background-image: linear-gradient(to right bottom, rgba($color-white, 0.799), rgba($color-blue-light, 0.799)), url(../src/images/Nightlife-1.jpg);
   background-size: cover;
   background-position: top;
