--- a/OpenJobs/walterCosmopolis/walter_cosmopolis/src/index.css
+++ b/OpenJobs/walterCosmopolis/walter_cosmopolis/src/index.css
@@ -194,7 +194,7 @@ html {
 .footer {
   text-align: center;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
   background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.799), rgba(129, 156, 243, 0.799)), url(../src/images/Nightlife-1.jpg);
   background-size: cover;
   background-position: top;
@@ -251,7 +251,7 @@ html {
 .section-performance {
   min-height: 90vh;
   position: relative;
-  background-blend-mode: screen;
+  margin-top: -12rem;
   clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%);
   -webkit-clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%); }
 
@@ -268,17 +268,17 @@ html {
   width: 100%; }
 
 @media only screen and (min-width: 490px) {
-  .section-outreach {
+  .section-performance {
     clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
     -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); } }
 
 @media only screen and (min-width: 686px) {
-  .section-outreach {
+  .section-performance {
     clip-path: polygon(0 11%, 100% 0, 100% 89%, 0 100%);
     -webkit-clip-path: polygon(0 11%, 100% 0, 100% 89%, 0 100%); } }
 
 @media only screen and (min-width: 752px) {
-  .section-outreach {
+  .section-performance {
     clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
     -webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%); } }
 
